package com.bms.restaurant_system.entity;

public enum PaymentMethod {
    DEPOSIT_SLIP,
    CASH_ON_DELIVERY
}
